xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__accumulator.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_transform(r#\"<xsl:transform version=\"3.0\" xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\"><xsl:accumulator name=\"foo\" initial-value=\"1\"><xsl:accumulator-rule match=\"foo\"/></xsl:accumulator></xsl:transform>\"#)"
---
Err(Attribute(Unexpected(
  name: XmlName(
    namespace: "",
    local: "version",
  ),
  span: Span(
    start: 15,
    end: 22,
  ),
)))
