xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__analyze_string_absent_non_matching_substring.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:analyze-string xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" select=\"true()\" regex=\"foo\"><xsl:matching-substring>Matching</xsl:matching-substring><xsl:fallback>Fallback 1</xsl:fallback><xsl:fallback>Fallback 2</xsl:fallback></xsl:analyze-string>\"#)"
---
Ok(Instruction(AnalyzeString(AnalyzeString(
  select: Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: Name(
              name: "true",
              prefix: None,
              namespace: Some("http://www.w3.org/2005/xpath-functions"),
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 77,
      end: 83,
    ),
  ),
  regex: ValueTemplate(
    template: [
      String(
        text: "foo",
        span: Span(
          start: 92,
          end: 95,
        ),
      ),
    ],
    phantom: PhantomData,
  ),
  flags: None,
  matching_substring: Some(MatchingSubstring(
    sequence_constructor: [
      TextNode("Matching"),
    ],
    standard: Standard(
      default_collation: None,
      default_mode: None,
      default_validation: None,
      exclude_result_prefixes: None,
      expand_text: None,
      extension_element_prefixes: None,
      use_when: None,
      version: None,
      xpath_default_namespace: None,
    ),
    span: Span(
      start: 98,
      end: 120,
    ),
  )),
  non_matching_substring: None,
  fallbacks: [
    Fallback(
      sequence_constructor: [
        TextNode("Fallback 1"),
      ],
      standard: Standard(
        default_collation: None,
        default_mode: None,
        default_validation: None,
        exclude_result_prefixes: None,
        expand_text: None,
        extension_element_prefixes: None,
        use_when: None,
        version: None,
        xpath_default_namespace: None,
      ),
      span: Span(
        start: 155,
        end: 167,
      ),
    ),
    Fallback(
      sequence_constructor: [
        TextNode("Fallback 2"),
      ],
      standard: Standard(
        default_collation: None,
        default_mode: None,
        default_validation: None,
        exclude_result_prefixes: None,
        expand_text: None,
        extension_element_prefixes: None,
        use_when: None,
        version: None,
        xpath_default_namespace: None,
      ),
      span: Span(
        start: 194,
        end: 206,
      ),
    ),
  ],
  standard: Standard(
    default_collation: None,
    default_mode: None,
    default_validation: None,
    exclude_result_prefixes: None,
    expand_text: None,
    extension_element_prefixes: None,
    use_when: None,
    version: None,
    xpath_default_namespace: None,
  ),
  span: Span(
    start: 1,
    end: 19,
  ),
))))
