xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__apply_templates_with_mixed_content.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:apply-templates xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\"><xsl:sort>Sort</xsl:sort><xsl:with-param name=\"a\">With param</xsl:with-param></xsl:apply-templates>\"#)"
---
Ok(Instruction(ApplyTemplates(ApplyTemplates(
  select: None,
  mode: None,
  content: [
    Sort(Sort(
      select: None,
      lang: None,
      order: None,
      collation: None,
      stable: None,
      case_order: None,
      data_type: None,
      sequence_constructor: [
        Content(Text("Sort")),
      ],
      span: Span(
        start: 71,
        end: 79,
      ),
    )),
    WithParam(WithParam(
      name: Name(
        name: "a",
        prefix: None,
        namespace: None,
      ),
      select: None,
      as_: None,
      tunnel: false,
      sequence_constructor: [
        Content(Text("With param")),
      ],
      span: Span(
        start: 96,
        end: 110,
      ),
    )),
  ],
  span: Span(
    start: 1,
    end: 20,
  ),
))))
