xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__attribute_value_template_just_string.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:assert xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" test=\"true()\" error-code=\"foo\">Hello</xsl:assert>\"#)"
---
Ok(Instruction(Assert(Assert(
  test: Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: Name(
              name: "true",
              prefix: None,
              namespace: Some("http://www.w3.org/2005/xpath-functions"),
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 67,
      end: 73,
    ),
  ),
  select: None,
  error_code: Some(ValueTemplate(
    template: [
      String(
        text: "foo",
        span: Span(
          start: 87,
          end: 90,
        ),
      ),
    ],
    phantom: PhantomData,
  )),
  sequence_constructor: [
    TextNode("Hello"),
  ],
  span: Span(
    start: 1,
    end: 11,
  ),
))))
