xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__attributes_on_literal_element.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<p xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" foo=\"FOO\"/>\"#)"
---
Ok(Content(Element(ElementNode(
  name: Name(
    name: "p",
    prefix: None,
    namespace: None,
  ),
  attributes: [
    (Name(
      name: "foo",
      prefix: None,
      namespace: None,
    ), ValueTemplate(
      template: [
        String(
          text: "FOO",
          span: Span(
            start: 57,
            end: 60,
          ),
        ),
      ],
      phantom: PhantomData,
    )),
  ],
  sequence_constructor: [],
  span: Span(
    start: 1,
    end: 2,
  ),
))))
