xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__broken_xpath.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse(r#\"<xsl:variable xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" name=\"foo\" select=\"let $x := 1\">Hello</xsl:variable>\"#)"
---
Err(XPath(ExpectedFound(
  span: SimpleSpan(
    start: 92,
    end: 93,
    context: (),
  ),
)))
