xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__copy.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:copy xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" select=\"true()\" copy-namespaces=\"no\" inherit-namespaces=\"no\" validation=\"strict\">Hello</xsl:copy>\"#)"
---
Ok(Instruction(Copy(Copy(
  select: Some(Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: Name(
              name: "true",
              prefix: None,
              namespace: Some("http://www.w3.org/2005/xpath-functions"),
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 67,
      end: 73,
    ),
  )),
  copy_namespaces: false,
  inherit_namespaces: false,
  use_attribute_sets: None,
  type_: None,
  validation: Strict,
  sequence_constructor: [
    TextNode("Hello"),
  ],
  standard: Standard(
    default_collation: None,
    default_mode: None,
    default_validation: None,
    exclude_result_prefixes: None,
    expand_text: None,
    extension_element_prefixes: None,
    use_when: None,
    version: None,
    xpath_default_namespace: None,
  ),
  span: Span(
    start: 1,
    end: 9,
  ),
))))
